brush up project a little bit
- replaced log4j with slf4j interfaces and solved some log4j security
issues
- removed dependency on xml base64 parser